# py_verifier_eudi

./: .gitignore  README.md
.claude/: settings.local.json
design_docs/: 00_CONVERSION_ROADMAP.md  01_SD_JWT_VC_VALIDATION.md  02_MSO_MDOC_VALIDATION.md  03_DCQL_VALIDATION.md  04_JAR_CREATION_AND_ENCRYPTION.md  05_PRESENTATION_STATE_MACHINE.md  06_TRUST_SOURCES_AND_CERTIFICATE_VALIDATION.md
docs/: Architecture.md
eudi_verifier/: .env.example  README.md  pyproject.toml
eudi_verifier/examples/: README.md  basic_usage.py  run_server.py
eudi_verifier/src/eudi_verifier/: __init__.py
eudi_verifier/src/eudi_verifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
eudi_verifier/src/eudi_verifier/adapter/: __init__.py
eudi_verifier/src/eudi_verifier/adapter/output/: __init__.py
eudi_verifier/src/eudi_verifier/adapter/output/jose/: __init__.py  jose_service_impl.py
eudi_verifier/src/eudi_verifier/adapter/output/persistence/: __init__.py  in_memory_repository.py
eudi_verifier/src/eudi_verifier/adapter/output/qrcode/: __init__.py  qrcode_service_impl.py
eudi_verifier/src/eudi_verifier/adapter/output/validation/: __init__.py  validation_service_impl.py
eudi_verifier/src/eudi_verifier/api/: __init__.py  app.py  dependencies.py
eudi_verifier/src/eudi_verifier/api/models/: __init__.py
eudi_verifier/src/eudi_verifier/api/routes/: ui.py  wallet.py
eudi_verifier/src/eudi_verifier/application/: __init__.py  get_request_object_impl.py  get_wallet_response_impl.py  init_transaction_impl.py  post_wallet_response_impl.py
eudi_verifier/src/eudi_verifier/config/: __init__.py  loader.py
eudi_verifier/src/eudi_verifier/domain/: __init__.py  clock.py  dcql.py  presentation.py  transaction_data.py  value_objects.py  verifier_config.py  wallet_response.py
eudi_verifier/src/eudi_verifier/port/: __init__.py
eudi_verifier/src/eudi_verifier/port/input/: __init__.py  get_request_object.py  get_wallet_response.py  init_transaction.py  post_wallet_response.py
eudi_verifier/src/eudi_verifier/port/output/: __init__.py  jose_service.py  presentation_repository.py  qrcode_service.py  trust_service.py  validation_service.py
eudi_verifier/tests/: __init__.py
eudi_verifier/tests/integration/: test_api_flow.py
eudi_verifier/tests/unit/domain/: conftest.py  test_clock.py  test_dcql.py  test_presentation.py  test_transaction_data.py  test_value_objects.py  test_verifier_config.py  test_wallet_response.py
